# AnkiFlow

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  anki_client.py  main.py  translator.py
src/config/: __init__.py  config.json  config_editor.py
